test/should-fail/vsgc2375.f3
/*
 * Regression test: VSGC-2375: Compiler internal error with the script "this"
 *
 * @test/compile-error
 */

this;
{ this; }
